[package]
name = "kactus"
version = "0.1.0"
edition = "2021"
default = [ "nightly" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33", features = ["full"] }
futures = "0.3.29"
reqwest = "0.11"
redis = { version = "0.23.3", features = ["streams"]}
csv = "1.3"
hyper = { version = "1.0.0-rc.4", features = ["full"] }
termion = "*"
farmhash = "1.1"
rand = "0.8"
actix-web = "4"
qstring = "0.7"
protobuf-json-mapping = "3.2.0"
protobuf = { version = "3.2.0", features = ["with-bytes"] }
gtfs-rt = "0.4"
serde_derive = "*"
serde_json = "*"
serde = "*"
arguments = "0.7"
color-eyre = "0.6.2"
fasthash = "0.4.0"
prost = "0.11.9"
rayon = "1.8.0"
actix_block_ai_crawling = "0.2.4"
systemctl = "0.3.1"
etcd = "0.9.0"
ahash = "0.8.6"
regex = "1.10.2"
snailquote = "0.3.1"
chrono = "0.4.31"
chrono-tz = "0.8.4"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "ingestv2"
path = "src/ingestv2/main.rs"

[[bin]]
name = "ingestmetrolink"
path = "src/ingestv2/metrolink.rs"

[[bin]]
name = "ingest_mtarail"
path = "src/conversions/nyc_rail.rs"

[[bin]]
name = "ingestdoublemap"
path = "src/conversions/doublemap/main.rs"

[[bin]]
name = "meerkat-fallback"
path = "src/meerkat-manager/meerkat-fallback.rs"
