[package]
name = "kactus"
version = "0.1.0"
edition = "2021"
default = [ "nightly" ]

[lints.rust]
unused_must_use = "deny"
non_ascii_idents = "deny"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix_block_ai_crawling = "0.2.8"
actix-web = "4.4.1"
actix-web-actors = "4.2.0"
ahash = "0.8.7"
amtrak-gtfs-rt = "0.1.14"
arguments = "0.7"
chrono = "0.4.31"
chrono-tz = "0.8.5"
color-eyre = "0.6.2"
csv = "1.3"
etcd = "0.9.0"
fasthash = "0.4.0"
farmhash = "1.1"
futures = "0.3.30"
gtfs-rt = "0.4"
hyper = { version = "1.1.0", features = ["full"] }
openssl = "0.10.62"
prost = "0.11.9"
protobuf = { version = "3.2.0", features = ["with-bytes"] }
protobuf-json-mapping = "3.2.0"
qstring = "0.7"
rand = "0.8"
rayon = "1.8.0"
redis = { version = "0.24", features = ["streams"] }
regex = "1.10.2"
reqwest = {version = "0.11", features = ["gzip","brotli","rustls-tls","deflate","cookies","mime_guess"]}
serde = "1.0.193"
serde_derive = "1.0.192"
serde_json = "1.0.108"
snailquote = "0.3.1"
systemctl = "0.3.1"
termion = "2.0.3"
tokio = { version = "1.33", features = ["full"] }
gtfs-structures = "0.39.0"
tokio-zookeeper = "0.2.1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "ingestv2"
path = "src/ingestv2/main.rs"

[[bin]]
name = "ingestmetrolink"
path = "src/ingestv2/metrolink.rs"

[[bin]]
name = "ingest_mtarail"
path = "src/conversions/nyc_rail.rs"

[[bin]]
name = "ingestdoublemap"
path = "src/conversions/doublemap/main.rs"

[[bin]]
name = "meerkat-fallback"
path = "src/meerkat-manager/meerkat-fallback.rs"

[[bin]]
name = "ingestamtrak"
path = "src/conversions/amtrak/amtrak.rs"

[[bin]]
name = "ingestv3"
path = "src/ingestv3/ingest.rs"